--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.57.1"
+  },
+  "dependencies": {
+    "tiny-slider": "^2.9.4"
   }
 }
